# SSG

./: .gitignore  CMakeLists.txt  README.md
config/: VehicleCouting.xml
module/: CMakeLists.txt
module/vehicle_counting/: CMakeLists.txt
module/vehicle_counting/package_analysis/: VehicleCouting.cpp  VehicleCouting.h
module/vehicle_counting/package_bgs/PBAS/: PBAS.cpp  PBAS.h  PixelBasedAdaptiveSegmenter.cpp  PixelBasedAdaptiveSegmenter.h
module/vehicle_counting/package_tracking/: BlobTracking.cpp  BlobTracking.h
module/vehicle_counting/package_tracking/cvblob/: cvblob.cpp  cvblob.h  cvtrack.cpp
sample/: CMakeLists.txt
sample/VCDemo/: CMakeLists.txt  Demo.cpp
sample/Video2Image/: CMakeLists.txt  FileSearch.cpp  FileSearch.h  main.cpp
