# The Vehicle Counting APP
PROJECT(VCDemo)

ADD_EXECUTABLE(vcdemo Demo.cpp)

# Add Dependencies 
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(vcdemo ${OpenCV_LIBS})
INCLUDE_DIRECTORIES(${VCLib_SOURCE_DIR})
TARGET_LINK_LIBRARIES(vcdemo Vehicle_counting)

# output configuration
SET_TARGET_PROPERTIES(vcdemo
					PROPERTIES
					RUNTIME_OUTPUT_DIRECTORY_DEBUG ${ROOT_BINARY_DIR}/bin
					RUNTIME_OUTPUT_DIRECTORY_RELEASE ${ROOT_BINARY_DIR}/bin
					DEBUG_POSTFIX d)





